# clx000-qt5-plugin

./: CLX000CanBus.cpp  CLX000CanBus.h  CLX000CanBusUSB.cpp  CLX000CanBusUSB.h  CLX000Plugin.cpp  CLX000Plugin.h  CMakeLists.txt  CRC16.cpp  CRC16.h  LICENSE  README.md  plugin.json  vcpkg.json
